--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <li><a href="#">About</a></li>
             <li class="dropdown"><a href="#">Services</a>
             <div class="dropdwn-content">
-                <a href="Wholesale.html">Wholesale</a>
+                <a href="#">Wholesale</a>
                 <a href="#">Retail</a>
-                <a href="#">order</a>
+                <a href="ORDER/f.html">order</a>
             </div>
             </li>
             <li><a href="#">Branches</a></li>
